0029116: [Regression] OCAF attributes insertion order is violated again